--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,13 @@
-<%= # sample index html
- <form action="/Words">
-   <div class="form-group">
-      <label for="word">write a word!</label>
-      <input name="input_word" class="form-control" type="text">
-      <label for="title">write a definition!</label>
-      <input name="input_definition" class="form-control" type="text">
-   </div>
-   <hr>
-   <button action="/" class="btn btn-success">Make A Word</button>
- </form>
-%>
+<h1>Type in a word and what it means!</h1>
+<form action="/word" method="post">
+  <div class="form-group">
+     <input name="word" class="form-control" type="text" placeholder="Type in a Word">
+     <input name="definition" class="form-control" type="text" placeholder="Type in the definition">
+  </div>
+  <hr>
+  <button type="submit" class="btn btn-success">Add the Word!</button>
+
+  <a href="/allwords">Display words</a>
+
+
+</form>
