add funtional sinatra page to page buttons. add word. view words. display word and definition.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <h1>Type in a word and what it means!</h1>
 <form action="/word" method="post">
   <div class="form-group">
-     <input name="word" class="form-control" type="text" placeholder="Type in a Word">
-     <input name="definition" class="form-control" type="text" placeholder="Type in the definition">
+     <input name="dictionary_word" class="form-control" type="text" placeholder="Type in a Word">
+     <input name="dictionary_word_definition" class="form-control" type="text" placeholder="Type in the definition">
   </div>
   <hr>
   <button type="submit" class="btn btn-success">Add the Word!</button>
