--- a/views/word.erb
+++ b/views/word.erb
@@ -1,8 +1,8 @@
-<h1>Word defined</h1>
+<h5>Word defined</h5>
 
-<ul>
-<li><%= @word %></li>
-<li><%= @words %></li>
-</u>
+
+<h1><%= @word.dictionary_word %></h1>
+<h2><%= @word.dictionary_word_definition %></h2>
+
 
 <a href="/">Return to Main Page</a>
