add funtioning display page for word and description.

--- a/views/word.erb
+++ b/views/word.erb
@@ -2,7 +2,7 @@
 
 
 <h1><%= @word.dictionary_word %></h1>
-<h2><%= @word.dictionary_word_definition %></h2>
+<h2><%= @word.dictionary_word_definition.definition %></h2>
 
 
 <a href="/">Return to Main Page</a>
