--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,10 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div class="jumbotron">
+      <h1>KidTionary!</h1>
+    </div>
     <div class="container">
-    <h1>KidTionary!</h1>
-    <hr>
       <%= yield %>
     </div>
   </body>
