--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,12 @@
 <h1>Type in a word and what it means!</h1>
 <form action="/word" method="post">
   <div class="form-group">
-     <input name="dictionary_word" class="form-control" type="text" placeholder="Type in a Word right here!">
-     <input name="dictionary_word_definition" class="form-control" type="text" placeholder="Type in the definition right here!">
+    <br>
+    <label for="dictionary_word">First, Write in a word</label>
+    <input name="dictionary_word" class="form-control" type="text" placeholder="Type in a Word right here!">
+    <br>
+    <label for="dictionary_word_definition">Now write what that words means to you!</label>
+    <input name="dictionary_word_definition" class="form-control" type="text" placeholder="Type in the definition right here!">
   </div>
   <hr>
   <p>After youve wrote your dictionary word. Click the green button to add it to your dictionary!
