--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
   <body>
     <div class="jumbotron">
       <h1>KidTionary!</h1>
+      <h3>A place for kids to define their own COOL!</h3>
     </div>
     <div class="container">
       <%= yield %>
