troubleshoot add def problem. hash issues.

--- a/views/allwords.erb
+++ b/views/allwords.erb
@@ -1,7 +1,7 @@
 <h1>Words</h1>
 <ul>
 <% @words.each() do |word| %>
-<li><a href='/word/<%= word.id %>'><%= word.dictionary_word %></a></li>
+<li><a href='/word/<%= word.id %>'><%= word.word %></a></li>
 <% end %>
 </ul>
 
