--- a/views/index.erb
+++ b/views/index.erb
@@ -2,18 +2,15 @@
 <form action="/word" method="post">
   <div class="form-group">
     <br>
-    <label for="dictionary_word">First, Write in a word</label>
-    <input name="dictionary_word" class="form-control" type="text" placeholder="Type in a Word right here!">
-    <br>
-    <label for="dictionary_word_definition">Now write what that words means to you!</label>
-    <input name="dictionary_word_definition" class="form-control" type="text" placeholder="Type in the definition right here!">
+    <label for="word">First, Write in a word</label>
+    <input name="word" class="form-control" type="text" placeholder="Type in a Word right here!">
   </div>
   <hr>
   <p>After youve wrote your dictionary word. Click the green button to add it to your dictionary!
   or click the blue button to look at all the words you've defined!</p>
-  <button type="submit" class="btn btn-success">Add the Word!</button>
+  <button type="click" class="btn btn-success">Add the Word!</button>
 
-  <button href="/allwords" class="btn btn-info">See Your Dictionary!</button>
 
 
 </form>
+<a href="/allwords" type="click" class="btn btn-info">See Your Dictionary!</button>
