--- a/views/word.erb
+++ b/views/word.erb
@@ -5,7 +5,7 @@
 <h1><%= @word.definitions %></h1>
 <ul>
   <% @word.definitions.each do |definition| %>
-    <li><% definition.definition.to_s %></li>
+    <li><% definition %></li>
   <% end %>
 </ul>
 
