diagnose dictionary print error and ensure specs are passing. Write new integration specs to comply to new definition add route.

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,12 +3,12 @@
   <div class="form-group">
     <br>
     <label for="word">First, Write in a word</label>
-    <input name="word" class="form-control" type="text" placeholder="Type in a Word right here!">
+    <input name="word" id='word' class="form-control" type="text" placeholder="Type in a Word right here!">
   </div>
   <hr>
   <p>After youve wrote your dictionary word. Click the green button to add it to your dictionary!
   or click the blue button to look at all the words you've defined!</p>
-  <button type="click" class="btn btn-success">Add the Word!</button>
+  <button type="submit" class="btn btn-success">Add the Word!</button>
 
 
 
